--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.3.4",
     "formik": "^2.2.9",
     "framer-motion": "^10.0.1",
+    "moment": "^2.29.4",
+    "momentjs": "^2.0.0",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
     "react-dom": "^18.2.0",
